[package]
name    = "merkle"
version = "1.6.0-pre"
authors = [
  "Frederic Jacobs <me@fredericjacobs.com>",
  "Dylan Bourgeois <dtsbourg@gmail.com>",
  "Romain Ruetschi <romain.ruetschi@gmail.com>"
]

description   = "Merkle tree implementation with support for generation of inclusion proofs."
license       = "BSD-3-Clause"
documentation = "https://spinresearch.github.io/merkle.rs/merkle/index.html"
homepage      = "https://github.com/SpinResearch/merkle.rs"
repository    = "https://github.com/SpinResearch/merkle.rs"
readme        = "README.md"
keywords      = ["merkle", "merkle-tree"]
categories    = ["data-structures", "cryptography"]


[dependencies]
ring = "^0.12.0"
protobuf = { version = "^1.4.0", optional = true }

[features]
serialization-protobuf = [ "protobuf" ]

[package.metadata.release]
sign-commit = true
upload-doc = true
doc-branch = "gh-pages"
pre-release-commit-message = "Release version {{version}}."
pro-release-commit-message = "Start next development iteration {{version}}."
tag-message = "Release version {{version}}."
doc-commit-message = "Update documentation."
dev-version-ext = "pre"


