[package]
name    = "merkle"
version = "1.10.1-pre"
authors = [
  "Frederic Jacobs <me@fredericjacobs.com>",
  "Dylan Bourgeois <dtsbourg@gmail.com>",
  "Romain Ruetschi <romain.ruetschi@gmail.com>"
]

description   = "Merkle tree implementation with support for generation of inclusion proofs."
license       = "BSD-3-Clause"
documentation = "https://spinresearch.github.io/merkle.rs/merkle/index.html"
homepage      = "https://github.com/SpinResearch/merkle.rs"
repository    = "https://github.com/SpinResearch/merkle.rs"
readme        = "README.md"
keywords      = ["merkle", "merkle-tree"]
categories    = ["data-structures", "cryptography"]


[dependencies]
ring = "^0.16.1"
protobuf = { version = "^2.8.0", optional = true }
serde = { version = "^1.0.97", optional = true }
serde_derive = { version = "^1.0.97", optional = true }

[build-dependencies]
protoc-rust = { version = "^2.8.0", optional = true }

[dev-dependencies]
serde_json = "1.0.40"

[features]
serialization-protobuf = [ "protobuf", "protoc-rust" ]
serialization-serde = [ "serde", "serde_derive" ]

[package.metadata.release]
sign-commit = true
upload-doc = true
doc-branch = "gh-pages"
pre-release-commit-message = "Release version {{version}}."
pro-release-commit-message = "Start next development iteration {{version}}."
tag-message = "Release version {{version}}."
doc-commit-message = "Update documentation."
dev-version-ext = "pre"

